--- a/13-naver-practice/audio.html
+++ b/13-naver-practice/audio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Audio Clip</title>
     <script
       src="https://kit.fontawesome.com/6e4612a324.js"
       crossorigin="anonymous"
@@ -75,8 +75,12 @@
                   </div>
                 </div>
 
-                <button type="button" class="btn btn-left"></button>
-                <button type="button" class="btn btn-right"></button>
+                <button type="button" class="btn btn-left">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button type="button" class="btn btn-right">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
               </div>
             </div>
           </div>
@@ -92,7 +96,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -100,7 +104,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -108,7 +112,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -116,7 +120,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -124,12 +128,10 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
               </ul>
-
-              <button type="button" class="btn-right"></button>
             </div>
           </div>
 
@@ -148,7 +150,7 @@
                     <div class="image-wrap">
                       <img src="https://via.placeholder.com/152" />
 
-                      <i class="icon-play"></i>
+                      <div class="icon-play"><i class="fas fa-play"></i></div>
                     </div>
 
                     <h3>이번주 베스트 추천</h3>
@@ -159,7 +161,7 @@
                     <div class="image-wrap">
                       <img src="https://via.placeholder.com/152" />
 
-                      <i class="icon-play"></i>
+                      <div class="icon-play"><i class="fas fa-play"></i></div>
                     </div>
 
                     <h3>이번주 베스트 추천</h3>
@@ -170,7 +172,7 @@
                     <div class="image-wrap">
                       <img src="https://via.placeholder.com/152" />
 
-                      <i class="icon-play"></i>
+                      <div class="icon-play"><i class="fas fa-play"></i></div>
                     </div>
 
                     <h3>이번주 베스트 추천</h3>
@@ -181,15 +183,13 @@
                     <div class="image-wrap">
                       <img src="https://via.placeholder.com/152" />
 
-                      <i class="icon-play"></i>
+                      <div class="icon-play"><i class="fas fa-play"></i></div>
                     </div>
 
                     <h3>이번주 베스트 추천</h3>
                   </a>
                 </li>
               </ul>
-
-              <button type="button" class="btn-right"></button>
             </div>
           </div>
 
@@ -209,7 +209,7 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -222,7 +222,7 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -235,7 +235,7 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -248,7 +248,7 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -261,12 +261,10 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
               </ul>
-
-              <button type="button" class="btn-right"></button>
             </div>
           </div>
 
@@ -284,8 +282,8 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author-1">기발자</span>
-                    <span class="author-2">기발자</span>
+                    <span class="author-1">chwonseok</span>
+                    <span class="author-2">chwonseok</span>
                     <span class="price">대여 3,500원</span>
                   </a>
                 </li>
@@ -297,8 +295,8 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author-1">기발자</span>
-                    <span class="author-2">기발자</span>
+                    <span class="author-1">chwonseok</span>
+                    <span class="author-2">chwonseok</span>
                     <span class="price">대여 3,500원</span>
                   </a>
                 </li>
@@ -310,40 +308,38 @@
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author-1">기발자</span>
-                    <span class="author-2">기발자</span>
+                    <span class="author-1">chwonseok</span>
+                    <span class="author-2">chwonseok</span>
                     <span class="price">대여 3,500원</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     <div class="image-wrap">
-                      <img src="https://via.placeholder.com/120x110" />
+                      <img src="https://via.placeholder.com/120x120" />
                       <span class="time">2시간</span>
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author-1">기발자</span>
-                    <span class="author-2">기발자</span>
+                    <span class="author-1">chwonseok</span>
+                    <span class="author-2">chwonseok</span>
                     <span class="price">대여 3,500원</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
                     <div class="image-wrap">
-                      <img src="https://via.placeholder.com/120x130" />
+                      <img src="https://via.placeholder.com/120x120" />
                       <span class="time">2시간</span>
                     </div>
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author-1">기발자</span>
-                    <span class="author-2">기발자</span>
+                    <span class="author-1">chwonseok</span>
+                    <span class="author-2">chwonseok</span>
                     <span class="price">대여 3,500원</span>
                   </a>
                 </li>
               </ul>
-
-              <button type="button" class="btn-right"></button>
             </div>
           </div>
 
@@ -358,7 +354,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -366,7 +362,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -374,7 +370,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -382,7 +378,7 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
                 <li>
@@ -390,12 +386,10 @@
                     <img src="https://via.placeholder.com/120" />
 
                     <h3>Title 1 Title 1 Title 1</h3>
-                    <span class="author">기발자</span>
+                    <span class="author">chwonseok</span>
                   </a>
                 </li>
               </ul>
-
-              <button type="button" class="btn-right"></button>
             </div>
           </div>
         </div>
