--- a/14-twitch-practice/index.html
+++ b/14-twitch-practice/index.html
@@ -176,7 +176,7 @@
           <ul>
             <li><a href="#">지원팀에 문의</a></li>
             <li><a href="#">판매약관</a></li>
-            <li><a href="#">사업자 정</a></li>
+            <li><a href="#">사업자</a></li>
           </ul>
         </div>
       </div>
