Added variable in css files

--- a/15-css-practice/index.html
+++ b/15-css-practice/index.html
@@ -19,5 +19,13 @@
     <h4>Hello World</h4>
     <h5>Hello World</h5>
     <h6>Hello World</h6>
+
+    <header id="intro">
+      <p>Header P</p>
+    </header>
+
+    <footer id="footer">
+      <p>Footer P</p>
+    </footer>
   </body>
 </html>
