--- a/self-taught-practice/applecoding/index.html
+++ b/self-taught-practice/applecoding/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice</title>
+    <title>Assignment</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="header"></div>
-      <div class="left"></div>
-      <div class="right"></div>
+      <div class="left">
+        <div class="title-wrap">
+          <img src="https://via.placeholder.com/40" />
+          <h3>A-uri</h3>
+          <p>an hour ago</p>
+        </div>
+        <div class="left-title">blah blah blah blah</div>
+        <div class="left-title-p"></div>
+      </div>
+      <div class="right">
+        <img src="https://via.placeholder.com/150" />
+      </div>
     </div>
   </body>
 </html>
