Done simple css assignment

--- a/self-taught-practice/applecoding/practice-2/index.html
+++ b/self-taught-practice/applecoding/practice-2/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <div class="img-bg"></div>
+    <div>
+      <a href="assignment.html">Check the assignment</a>
+    </div>
   </body>
 </html>
