Minor changes on assignment

--- a/self-taught-practice/applecoding/practice-2/assignment.html
+++ b/self-taught-practice/applecoding/practice-2/assignment.html
@@ -28,12 +28,12 @@
         </div>
         <div class="message-wrap">
           <h3>Message</h3>
-          <textarea cols="50" rows="10"></textarea>
+          <textarea rows="10"></textarea>
         </div>
         <div class="footer-wrap">
-          <input type="checkbox" value="Subscribe" />
-          <span>Subscribe</span>
-          <button>SEND</button>
+          <input type="checkbox" id="check" />
+          <label for="check">Subscribe</label>
+          <button type="submit">SEND</button>
         </div>
       </form>
     </div>
