--- a/self-taught-practice/applecoding/practice-4/index.html
+++ b/self-taught-practice/applecoding/practice-4/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo"></div>
-        <div class="empty"></div>
-        <div class="menu-1"></div>
-        <div class="menu-2"></div>
+        <div class="box red"></div>
+        <div class="box green"></div>
+        <div class="box coral"></div>
+        <div class="box blue"></div>
       </div>
     </header>
   </body>
