--- a/self-taught-practice/applecoding/practice-4/index.html
+++ b/self-taught-practice/applecoding/practice-4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice 4 - flex</title>
+    <title>Practice 4 - flex, media query</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,5 +16,25 @@
         <div class="box blue"></div>
       </div>
     </header>
+
+    <div class="info-container">
+      <div class="feature-1">
+        <p>Fast Shipping</p>
+        <p>We ship 90% faster than any other services</p>
+      </div>
+      <div class="feature-2">
+        <p>Global</p>
+        <p>We serve global customers, anywhere</p>
+      </div>
+      <div class="feature-3">
+        <p>Good Quality</p>
+        <p>Superior quality is not an option.</p>
+      </div>
+      <div class="feature-4">
+        <p>Excellent service</p>
+        <p>Customer calls and service</p>
+      </div>
+      <!-- <div style="clear: both"></div> -->
+    </div>
   </body>
 </html>
