Added few practices

--- a/self-taught-practice/applecoding/practice-4/index.html
+++ b/self-taught-practice/applecoding/practice-4/index.html
@@ -17,24 +17,40 @@
       </div>
     </header>
 
-    <div class="info-container">
-      <div class="feature-1">
-        <p>Fast Shipping</p>
-        <p>We ship 90% faster than any other services</p>
+    <div id="main">
+      <div class="info-container">
+        <div class="feature-1">
+          <p>Fast Shipping</p>
+          <p>We ship 90% faster than any other services</p>
+        </div>
+        <div class="feature-2">
+          <p>Global</p>
+          <p>We serve global customers, anywhere</p>
+        </div>
+        <div class="feature-3">
+          <p>Good Quality</p>
+          <p>Superior quality is not an option.</p>
+        </div>
+        <div class="feature-4">
+          <p>Excellent service</p>
+          <p>Customer calls and service</p>
+        </div>
       </div>
-      <div class="feature-2">
-        <p>Global</p>
-        <p>We serve global customers, anywhere</p>
+      <div style="clear: both"></div>
+
+      <div class="product">
+        <div class="product-wrap">
+          <div class="overlay-wrap">
+            <div class="overlay-real">
+              <p>This is mine</p>
+            </div>
+          </div>
+          <img
+            src="https://cdn.road.cc/sites/default/files/bianchi-oltre-xr4-disc.jpg"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="feature-3">
-        <p>Good Quality</p>
-        <p>Superior quality is not an option.</p>
-      </div>
-      <div class="feature-4">
-        <p>Excellent service</p>
-        <p>Customer calls and service</p>
-      </div>
-      <!-- <div style="clear: both"></div> -->
     </div>
   </body>
 </html>
