Added now section

--- a/17-mnaver-practice/index.html
+++ b/17-mnaver-practice/index.html
@@ -39,8 +39,67 @@
               <li><a href="#">경제지표</a></li>
             </ul>
           </nav>
+
           <main role="main" class="content">
             <div class="ad"><a href="#">광 고</a></div>
+            <div class="weather-container">
+              <div class="weather-top">
+                <i class="fas fa-cloud-sun-rain"></i>
+                <div class="weather-info">
+                  <h3>22° 대구</h3>
+                  <p>미세 <span>좋음</span> · 초미세 <span>좋음</span></p>
+                </div>
+                <p>내 위치찾기<i class="fas fa-compass"></i></p>
+              </div>
+              <div class="weather-bottom">
+                <p>
+                  위치 찾기를 눌러 현 위치의 시간대별·주간날씨와 미세먼지 예보를
+                  여기에서 바로 보세요
+                </p>
+              </div>
+            </div>
+
+            <div class="now-container">
+              <div class="now-header">
+                <h3>NOW.</h3>
+              </div>
+              <div class="now-main">
+                <div class="main-1">
+                  <img
+                    src="https://i.pinimg.com/564x/da/3b/be/da3bbe3597cdc8b787b8a2577ecfc3cf--joker-heath-the-joker.jpg"
+                    alt=""
+                  />
+                  <p>Dark Night</p>
+                </div>
+                <div class="main-2">
+                  <img
+                    src="https://m.media-amazon.com/images/M/MV5BMjhiMzgxZTctNDc1Ni00OTIxLTlhMTYtZTA3ZWFkODRkNmE2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_FMjpg_UX1000_.jpg"
+                    alt=""
+                  />
+                  <p>Breaking BAd</p>
+                </div>
+                <div class="main-3">
+                  <img
+                    src="https://m.media-amazon.com/images/I/A1JVqNMI7UL._SL1500_.jpg"
+                    alt=""
+                  />
+                  <p>Interstellar</p>
+                </div>
+                <div class="main-4">
+                  <img
+                    src="https://lumiere-a.akamaihd.net/v1/images/p_avengersendgame_19751_e14a0104.jpeg?region=0%2C0%2C540%2C810"
+                    alt=""
+                  />
+                  <p>Avengers End Game</p>
+                </div>
+              </div>
+
+              <div class="now-footer">
+                <p><a href="#">나우 편성표</a></p>
+                <p>|</p>
+                <p><a href="#">쇼핑 편성표</a></p>
+              </div>
+            </div>
           </main>
         </div>
       </body>
