Added vaccine section

--- a/17-mnaver-practice/index.html
+++ b/17-mnaver-practice/index.html
@@ -100,6 +100,18 @@
                 <p><a href="#">쇼핑 편성표</a></p>
               </div>
             </div>
+
+            <div class="vaccine">
+              <img
+                src="https://www.seekpng.com/png/detail/369-3697710_injections-vaccine-icon.png"
+                alt=""
+              />
+              <p>
+                18~49세,
+                <span><a href="#">네이버 인증서</a></span
+                >로 백신 예약하세요
+              </p>
+            </div>
           </main>
         </div>
       </body>
