mobile naver clonning almost done

--- a/17-mnaver-practice/index.html
+++ b/17-mnaver-practice/index.html
@@ -112,6 +112,10 @@
                 >로 백신 예약하세요
               </p>
             </div>
+
+            <div class="small-banner">광 고</div>
+
+            <div class="corona"></div>
           </main>
         </div>
       </body>
