Added header and section-1

--- a/self-taught-practice/applecoding/landing-page/index.html
+++ b/self-taught-practice/applecoding/landing-page/index.html
@@ -7,5 +7,25 @@
     <title>Lading Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header-left">
+        <h2>Landing Page <br />for Apps</h2>
+        <p>We offer great landing pages for most of the businesses.</p>
+        <button class="btn">Show more</button>
+      </div>
+      <div class="header-right">
+        <img src="./img/iphone-300x300.png" alt="" />
+      </div>
+    </header>
+
+    <section class="section-1">
+      <h3>xxxh Porfolio is the perfect theme for your next project!</h3>
+      <p>
+        xxx features a flexible, UX friendly sidebar menu and stock photos from
+        our friends at Unsplash!
+      </p>
+      <button class="btn">Show Porfolio</button>
+    </section>
+  </body>
 </html>
