--- a/self-taught-practice/applecoding/landing-page/index.html
+++ b/self-taught-practice/applecoding/landing-page/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/6e4612a324.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Lading Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -26,6 +30,35 @@
         our friends at Unsplash!
       </p>
       <button class="btn">Show Porfolio</button>
+    </section>
+
+    <section class="section-2">
+      <div class="services-top">
+        <h3>SERVICES</h3>
+        <p>What We Offer</p>
+      </div>
+      <div class="services-bottom">
+        <div class="service">
+          <div class="circle"><i class="fas fa-mobile-alt"></i></div>
+          <h4>Responsive</h4>
+          <p>Looks great on any screen size</p>
+        </div>
+        <div class="service">
+          <div class="circle"><i class="fas fa-pencil-alt"></i></div>
+          <h4>Redesigned</h4>
+          <p>Freshly redesigned for Bootstrap 4.</p>
+        </div>
+        <div class="service">
+          <div class="circle"><i class="far fa-thumbs-up"></i></div>
+          <h4>Favorited</h4>
+          <p>Millions of users ❤️ Start Bootstarp!</p>
+        </div>
+        <div class="service">
+          <div class="circle"><i class="fas fa-question"></i></div>
+          <h4>Question</h4>
+          <p>I mustache you a question...</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
