--- a/self-taught-practice/applecoding/landing-page/index.html
+++ b/self-taught-practice/applecoding/landing-page/index.html
@@ -46,17 +46,17 @@
         <div class="service">
           <div class="circle"><i class="fas fa-pencil-alt"></i></div>
           <h4>Redesigned</h4>
-          <p>Freshly redesigned for Bootstrap 4.</p>
+          <p>Freshly redesigned for Bootstrap 4</p>
         </div>
         <div class="service">
           <div class="circle"><i class="far fa-thumbs-up"></i></div>
           <h4>Favorited</h4>
-          <p>Millions of users ❤️ Start Bootstarp!</p>
+          <p>Millions of users❤️Start Bootstarp!</p>
         </div>
         <div class="service">
           <div class="circle"><i class="fas fa-question"></i></div>
           <h4>Question</h4>
-          <p>I mustache you a question...</p>
+          <p>I mustache you a question..</p>
         </div>
       </div>
     </section>
