Done with m naver

--- a/17-mnaver-practice/index.html
+++ b/17-mnaver-practice/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>NAVER</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -76,7 +76,7 @@
                     src="https://m.media-amazon.com/images/M/MV5BMjhiMzgxZTctNDc1Ni00OTIxLTlhMTYtZTA3ZWFkODRkNmE2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_FMjpg_UX1000_.jpg"
                     alt=""
                   />
-                  <p>Breaking BAd</p>
+                  <p>Breaking Bad</p>
                 </div>
                 <div class="main-3">
                   <img
@@ -115,7 +115,102 @@
 
             <div class="small-banner">광 고</div>
 
-            <div class="corona"></div>
+            <div class="corona">
+              <div class="corona-left">
+                <h3>코로나바이러스-19</h3>
+                <div class="current-corona">
+                  <div class="corona-info">
+                    <h4>국내 누적 확진환자</h4>
+                    <p>237,782</p>
+                  </div>
+                  <div class="line"></div>
+                  <div class="corona-info">
+                    <h4>신규 확진환자</h4>
+                    <p>1,418</p>
+                  </div>
+                </div>
+              </div>
+              <div class="corona-right">
+                <a href="#"
+                  ><i class="fas fa-map-marked"></i>
+                  <p>
+                    내주변 <br />
+                    선별 진료소
+                  </p></a
+                >
+              </div>
+            </div>
+
+            <div class="checkin">
+              <div class="logo">
+                <a href="#"><i class="fas fa-star"></i></a>
+              </div>
+              <div>
+                <p>QR체크인, 현장결제</p>
+                <p><span>네이버앱</span>에서 더 편리하게!</p>
+              </div>
+              <div>
+                <a href="#">
+                  <p>앱 사용하기 <i class="fas fa-chevron-right"></i></p>
+                </a>
+              </div>
+            </div>
+
+            <div class="items">
+              <div class="item left">
+                <i class="fas fa-arrow-left"></i>
+                <div class="item-middle">
+                  <h4>미리보는 추석선물</h4>
+                  <p>올해 추석선물, 선물샵에서 챙겨요!</p>
+                </div>
+                <img src="https://via.placeholder.com/50" alt="" />
+              </div>
+              <div class="item right">
+                <img src="https://via.placeholder.com/50" alt="" />
+                <div class="item-middle">
+                  <h4>미리보는 추석선물</h4>
+                  <p>올해 추석선물, 선물샵에서 챙겨요!</p>
+                </div>
+                <i class="fas fa-arrow-right"></i>
+              </div>
+              <div class="item left">
+                <i class="fas fa-arrow-left"></i>
+                <div class="item-middle">
+                  <h4>미리보는 추석선물</h4>
+                  <p>올해 추석선물, 선물샵에서 챙겨요!</p>
+                </div>
+                <img src="https://via.placeholder.com/50" alt="" />
+              </div>
+            </div>
+
+            <div class="border"></div>
+            <div class="today-naver">
+              <div class="today-top">
+                <h3>오늘 네이버</h3>
+                <p>더보기 <i class="fas fa-chevron-right"></i></p>
+              </div>
+              <div class="today-bottom">
+                <div class="today-bottom-top"></div>
+                <div class="today-bottom-bottom"></div>
+              </div>
+            </div>
+
+            <div class="dots">
+              <div class="dot on"></div>
+              <div class="dot"></div>
+            </div>
+
+            <footer>
+              <div class="footer-top">
+                <a href="#"><h5>로그아웃</h5></a>
+                <a href="#"><h5>전체서비스</h5></a>
+                <a href="../13-naver-practice/index.html"><h5>PC버전</h5></a>
+                <a href="#"><h5>이용약관</h5></a>
+                <a href="#"><h5>개인정보처리방침</h5></a>
+                <a href="#"><h5>고객센터</h5></a>
+              </div>
+              <a href="./index.html"><p class="last-naver">NAVER</p></a>
+            </footer>
           </main>
         </div>
       </body>
