Updated 2 more sections

--- a/self-taught-practice/applecoding/landing-page/index.html
+++ b/self-taught-practice/applecoding/landing-page/index.html
@@ -51,14 +51,37 @@
         <div class="service">
           <div class="circle"><i class="far fa-thumbs-up"></i></div>
           <h4>Favorited</h4>
-          <p>Millions of users❤️Start Bootstarp!</p>
+          <p>Millions of users ❤️ Start Bootstarp!</p>
         </div>
         <div class="service">
           <div class="circle"><i class="fas fa-question"></i></div>
           <h4>Question</h4>
-          <p>I mustache you a question..</p>
+          <p>I mustache you a question...</p>
         </div>
       </div>
     </section>
+
+    <section class="section-3">
+      <div class="services-top">
+        <h3>PORTFOLIO</h3>
+        <p>What you can DO</p>
+      </div>
+
+      <div class="portfolio-wrap">
+        <div><img src="img/portfolio-1.jpeg" /></div>
+        <div><img src="img/portfolio-2.jpeg" /></div>
+        <div><img src="img/portfolio-3.jpeg" /></div>
+        <div><img src="img/portfolio-4.jpeg" /></div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="icons-wrap">
+        <a><i class="fab fa-facebook-f"></i></a>
+        <a><i class="fab fa-twitter"></i></a>
+        <a><i class="fab fa-github"></i></a>
+      </div>
+      <div class="copyright"><p>Copyright © Your Website 2021</p></div>
+    </footer>
   </body>
 </html>
