Added minor changes

--- a/self-taught-practice/applecoding/landing-page/index.html
+++ b/self-taught-practice/applecoding/landing-page/index.html
@@ -68,11 +68,34 @@
       </div>
 
       <div class="portfolio-wrap">
-        <div><img src="img/portfolio-1.jpeg" /></div>
-        <div><img src="img/portfolio-2.jpeg" /></div>
-        <div><img src="img/portfolio-3.jpeg" /></div>
-        <div><img src="img/portfolio-4.jpeg" /></div>
+        <div class="box-1">
+          <div class="white-box"></div>
+          <h4>STATIONARY</h4>
+          <p>A yellow pencil with envelopes on a clean, blue backdrop!</p>
+        </div>
+        <div class="box-2">
+          <div class="white-box"></div>
+          <h4>ICE CREAM</h4>
+          <p>
+            A dark blue background with a colored pencil, a clip, and a tiny ice
+            cream cone!
+          </p>
+        </div>
+        <div class="box-3">
+          <div class="white-box"></div>
+          <h4>STRAWBERRIES</h4>
+          <p>
+            Strawberries are such a tasty snack, especially with a little sugar
+            on top!
+          </p>
+        </div>
+        <div class="box-4">
+          <div class="white-box"></div>
+          <h4>WORKSPACE</h4>
+          <p>A yellow workspace with scissors, pencils, and other objects.</p>
+        </div>
       </div>
+      <div class="clear-both"></div>
     </section>
 
     <footer>
