Added header part

--- a/self-taught-practice/applecoding/portfolio/index.html
+++ b/self-taught-practice/applecoding/portfolio/index.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="profile-container">
+        <div class="profile-left">
+          <img src="https://via.placeholder.com/100" alt="profile-picture" />
+          <div class="my-info">
+            <h1>Wonseok Choi</h1>
+            <h2>Front-End Developer</h2>
+            <p>Suseong-gu, Daegu</p>
+            <button>Contact</button>
+          </div>
+        </div>
+        <div class="profile-right">
+          <div>
+            <p>Location</p>
+            <p>Suseong-gu, Daegu</p>
+          </div>
+          <div>
+            <p>Age</p>
+            <p>March, 1989</p>
+          </div>
+          <div>
+            <p>Experience</p>
+            <p>Junior</p>
+          </div>
+          <div>
+            <p>School</p>
+            <p>Economics, Yeongnam University</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
