Finished profile section

--- a/self-taught-practice/applecoding/portfolio/index.html
+++ b/self-taught-practice/applecoding/portfolio/index.html
@@ -21,8 +21,8 @@
         </div>
         <div class="profile-right">
           <div>
-            <p>Location</p>
-            <p>Suseong-gu, Daegu</p>
+            <p>Country</p>
+            <p>South Korea</p>
           </div>
           <div>
             <p>Age</p>
@@ -33,8 +33,12 @@
             <p>Junior</p>
           </div>
           <div>
-            <p>School</p>
-            <p>Economics, Yeongnam University</p>
+            <p>Major</p>
+            <p>Economics</p>
+          </div>
+          <div>
+            <p>University</p>
+            <p>Yeongnam</p>
           </div>
         </div>
       </div>
