Updated main part

--- a/self-taught-practice/applecoding/portfolio/index.html
+++ b/self-taught-practice/applecoding/portfolio/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="profile-container">
+      <!-- Profile -->
+      <div class="profile-container card">
         <div class="profile-left">
           <img src="https://via.placeholder.com/100" alt="profile-picture" />
           <div class="my-info">
@@ -40,6 +41,43 @@
             <p>University</p>
             <p>Yeongnam</p>
           </div>
+        </div>
+      </div>
+
+      <!-- border -->
+      <div class="outer-border">
+        <div class="inner-border"><p>Profile</p></div>
+      </div>
+
+      <!-- Main -->
+      <div class="main">
+        <div class="works card">
+          <h3 class="title">WORKS</h3>
+          <p>Building landing page</p>
+          <p>Building React website</p>
+          <p>Building calculator app</p>
+          <p>Clonning Kakaotalk</p>
+        </div>
+        <div class="skill card">
+          <h3 class="title">ABOUT</h3>
+          <p>
+            I'm a junior front-end developer who is confident in html, css,
+            javascript, react. I genuinely enjoy developing, and have such a big
+            passion on it. For further more information about me, don't hesitate
+            to email me through the contact button above.
+          </p>
+          <div class="line"></div>
+          <h3 class="title">SKILLS</h3>
+          <div class="skills">
+            <a href="#">html</a>
+            <a href="#">css</a>
+            <a href="#">javascript</a>
+            <a href="#">react</a>
+            <a href="#">git</a>
+          </div>
+        </div>
+        <div class="links">
+          <div class="findme card"></div>
         </div>
       </div>
     </div>
