--- a/self-taught-practice/applecoding/portfolio/index.html
+++ b/self-taught-practice/applecoding/portfolio/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,7 +23,7 @@
             <h1>Wonseok Choi</h1>
             <h2>Front-End Developer</h2>
             <p>Suseong-gu, Daegu</p>
-            <button>Contact</button>
+            <button class="btn">Contact</button>
           </div>
         </div>
         <div class="profile-right">
@@ -77,7 +83,12 @@
           </div>
         </div>
         <div class="links">
-          <div class="findme card"></div>
+          <div class="findme card">
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <p>Find me at Linkedin</p>
+            <button class="btn">Sign Up</button> <br />
+            <a href="#"><p>Already a member?</p></a>
+          </div>
         </div>
       </div>
     </div>
