Done with assignment
color hex code generator
quote generator

--- a/18-javascript-practice/index.html
+++ b/18-javascript-practice/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>HEX COLOR: <span id="hex"></span></h1>
+    <button id="btn1" type="button">Here</button>
+
+    <button id="btn2" type="button">quotes</button>
+    <h2 id="quotation"></h2>
+    <p class="author"></p>
+
     <script src="index.js"></script>
   </body>
 </html>
