Added few applications

--- a/18-javascript-practice/index.html
+++ b/18-javascript-practice/index.html
@@ -15,6 +15,13 @@
     <h2 id="quotation"></h2>
     <p class="author"></p>
 
+    <form>
+      <input class="msg" type="text" />
+      <button type="submit">enter</button>
+    </form>
+    <h2 class="error">Enter any text in the field!!!</h2>
+    <h2 class="entered"></h2>
+
     <script src="index.js"></script>
   </body>
 </html>
