Done few JS practice

--- a/self-taught-practice/applecoding/sass-practice/index.html
+++ b/self-taught-practice/applecoding/sass-practice/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="grid-parents">
+    <!-- <div class="grid-parents">
       <div class="grid-nav"></div>
       <div class="grid-menu"></div>
       <div class="grid-main"></div>
-    </div>
+    </div> -->
+
+    <div class="grey"></div>
   </body>
 </html>
