Minor updated for sticky practice

--- a/self-taught-practice/applecoding/sticky/index.html
+++ b/self-taught-practice/applecoding/sticky/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="container">
+      <h1>iPhone 13 released!</h1>
+
       <div class="grey">
         <h2>
           fixed text here Lorem ipsum dolor sit amet consectetur adipisicing
