--- a/18-javascript-practice/todolist/index.html
+++ b/18-javascript-practice/todolist/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <!-- input field -->
+      <header>
+        <form>
+          <h1>To do List</h1>
+          <input type="text" placeholder="enter what to do today" />
+          <button type="submit">Add</button>
+        </form>
+      </header>
+      <!-- to do list -->
+      <div class="todo-wrap">
+        <ol class="todos">
+          <li>tast to do</li>
+          <div class="btns">
+            <button class="done">done</button>
+            <button class="remove">remove</button>
+          </div>
+        </ol>
+      </div>
+      <div style="clear: both"></div>
+      <!-- completed list -->
+      <div class="done-wrap">
+        <ol class="todos">
+          <li>tast done</li>
+          <div class="btns">
+            <button class="done">done</button>
+            <button class="remove">remove</button>
+          </div>
+        </ol>
+      </div>
+      <div style="clear: both"></div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
