Practiced scroll effect with JS

--- a/18-javascript-practice/scroll-animation/index.html
+++ b/18-javascript-practice/scroll-animation/index.html
@@ -8,8 +8,92 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="back">
-      <div class="main"></div>
+    <div class="container">
+      <nav>
+        <div class="menu">menu1</div>
+        <div class="menu">menu2</div>
+        <div class="menu">menu3</div>
+        <div class="menu">menu4</div>
+        <div class="menu">menu5</div>
+      </nav>
+
+      <div class="main">
+        <div class="section-1">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            cupiditate officia sed, alias eos dignissimos iste animi laboriosam,
+            non quae saepe adipisci similique fugiat rerum, rem voluptatem est
+            reiciendis repellat? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Deleniti cupiditate officia sed, alias eos
+            dignissimos iste animi laboriosam, non quae saepe adipisci similique
+            fugiat rerum, rem voluptatem est reiciendis repellat? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Deleniti cupiditate
+            officia sed, alias eos dignissimos iste animi laboriosam, non quae
+            saepe adipisci similique fugiat rerum, rem voluptatem est reiciendis
+            repellat?
+          </p>
+        </div>
+        <div class="section-2">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            cupiditate officia sed, alias eos dignissimos iste animi laboriosam,
+            non quae saepe adipisci similique fugiat rerum, rem voluptatem est
+            reiciendis repellat? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Deleniti cupiditate officia sed, alias eos
+            dignissimos iste animi laboriosam, non quae saepe adipisci similique
+            fugiat rerum, rem voluptatem est reiciendis repellat? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Deleniti cupiditate
+            officia sed, alias eos dignissimos iste animi laboriosam, non quae
+            saepe adipisci similique fugiat rerum, rem voluptatem est reiciendis
+            repellat?
+          </p>
+        </div>
+        <div class="section-3">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            cupiditate officia sed, alias eos dignissimos iste animi laboriosam,
+            non quae saepe adipisci similique fugiat rerum, rem voluptatem est
+            reiciendis repellat? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Deleniti cupiditate officia sed, alias eos
+            dignissimos iste animi laboriosam, non quae saepe adipisci similique
+            fugiat rerum, rem voluptatem est reiciendis repellat? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Deleniti cupiditate
+            officia sed, alias eos dignissimos iste animi laboriosam, non quae
+            saepe adipisci similique fugiat rerum, rem voluptatem est reiciendis
+            repellat?
+          </p>
+        </div>
+        <div class="section-4">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            cupiditate officia sed, alias eos dignissimos iste animi laboriosam,
+            non quae saepe adipisci similique fugiat rerum, rem voluptatem est
+            reiciendis repellat? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Deleniti cupiditate officia sed, alias eos
+            dignissimos iste animi laboriosam, non quae saepe adipisci similique
+            fugiat rerum, rem voluptatem est reiciendis repellat? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Deleniti cupiditate
+            officia sed, alias eos dignissimos iste animi laboriosam, non quae
+            saepe adipisci similique fugiat rerum, rem voluptatem est reiciendis
+            repellat?
+          </p>
+        </div>
+        <div class="section-5">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
+            cupiditate officia sed, alias eos dignissimos iste animi laboriosam,
+            non quae saepe adipisci similique fugiat rerum, rem voluptatem est
+            reiciendis repellat? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Deleniti cupiditate officia sed, alias eos
+            dignissimos iste animi laboriosam, non quae saepe adipisci similique
+            fugiat rerum, rem voluptatem est reiciendis repellat? Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Deleniti cupiditate
+            officia sed, alias eos dignissimos iste animi laboriosam, non quae
+            saepe adipisci similique fugiat rerum, rem voluptatem est reiciendis
+            repellat?
+          </p>
+        </div>
+      </div>
     </div>
     <script src="./main.js"></script>
   </body>
